# libhal-mpu

./: .cspell.json  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml  deploy.yml  presubmit.yml  take.yml
demos/: CMakeLists.txt  conanfile.py  conanfile.txt  hardware_map.hpp  main.cpp
demos/applications/: mpu6050.cpp
demos/targets/lpc4074/: initializer.cpp  libhal.tweaks.hpp
demos/targets/lpc4078/: initializer.cpp
docs/: doxygen.conf
docs/capture/mpu6050/: MPU6050Configure+GetAcceleration.sal
include/libhal-mpu/: mpu6050.hpp
include/libmpu/: mpu6050.hpp
src/: mpu6050.cpp  mpu6050_constants.hpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  conanfile.txt  empty.test.cpp  libhal.tweaks.hpp  main.test.cpp  mpu6050.test.cpp  run.sh
tests/application/: mpu6050.cpp
